# rigatoni-chessbot

./: README.md  computeNeglect.m  rigatoni_params.m
CAD/: Board.DXF  Board.SLDDRW  Board.SLDPRT  Elbow - End Effector.SLDPRT  Elbow - Motor.SLDPRT  Elbow - Mounting.SLDPRT  Elbow.SLDPRT  End Effector - Assembly.SLDASM  End Effector - ChooChoo Link 1.SLDPRT  End Effector - ChooChoo Link 2.SLDPRT  End Effector - Slidey Part.SLDPRT  Link - 90 Rotation.SLDPRT  Link Assembly.SLDASM  Link Base ASM.SLDASM  Link Base v2.SLDPRT  Link Base.SLDPRT  Link End Effector.SLDPRT  Link.SLDPRT  MX-28AR.SLDPRT  Mounting Hub.SLDPRT  Multi-Link Assembly.SLDASM  Slip Ring.SLDPRT  Stand.SLDPRT  TONI Assembly.SLDASM  TONI Straightened.SLDASM  TONI with Chessboard.SLDASM
RigatoniTheSuicideChessbot/: board_params.m  chess_set_params.m  rigatoni_params.m  seeBoard2D.m  seeRigatoni2D.m  trajectory_params.m
rigatoni-python/: ChessSet.py  Data_Plotter.py  InverseDynamics.py  PID.py  RigatoniGame.py  RigatoniMain.py  RigatoniParameterClasses.py  RigatoniTrajectoryGenerator.py  arduino_communication.py  demo_trajectory.py  possibly_useful_functions.py  requirements.txt  testTraj.py  upDown.py
rigatoni-python/dynamixel_utils/: pyproject.toml  setup.py
rigatoni-python/dynamixel_utils/dynamixel_utils-stubs/: __init__.pyi
rigatoni-python/dynamixel_utils/dynamixel_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rigatoni-python/dynamixel_utils/include/: fixed_frequency_loop_manager.h
rigatoni-python/dynamixel_utils/source/: fixed_frequency_loop_manager.cpp
(+37 files in other folders)
