[build-system]
requires = ["setuptools>=61.0", "pybind11>=0.1.35"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamixel_utils"
version = "0.0.0"
dependencies = [
    "numpy",  # For multi-dimensional array support
    "scipy",  # For converting transfer functions to state space representation
    "dynamixel_controller",
    "pybind11",
    "pandas",
    "tqdm"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools]
py-modules = [
    "__init__",
]

[tool.setuptools.package-data]
dynamixel_utils = ["*.json"]
